--- a/osaka-store.html
+++ b/osaka-store.html
@@ -19,6 +19,6 @@
         </ul>
     </header>
     <h1>Osaka | Store | Japan</h1>
-    <p>At the moment the TownyHavens Minecraft Server hasn't opened yet. Once the server opens up it should be around 1-2 before our first shops open. We will let you know when our shops open!</p>
+    <p>At the moment the TownyHavens Minecraft Server hasn't opened yet. Once the server opens up it should be around 1-2 days before our first shops open. We will let you know when our shops open!</p>
 </body>
 </html>
